syntax = "proto3";
package tempest.server_list;
option csharp_namespace = "Tempest.Protocol.ServerList";

message HeartbeatLobbyResponse {
}