syntax = "proto3";
package tempest.server_list;
option csharp_namespace = "Tempest.Protocol.ServerList";

import "server_list/create_lobby_request.proto";
import "server_list/create_lobby_response.proto";
import "server_list/get_server_by_id_request.proto";
import "server_list/get_servers_request.proto";
import "server_list/heartbeat_lobby_request.proto";
import "server_list/heartbeat_lobby_response.proto";
import "server_list/server_listing.proto";

service ServerList {
  rpc CreateLobby(CreateLobbyRequest) returns (CreateLobbyResponse);
  rpc GetServers(GetServersRequest) returns (stream ServerListing);
  rpc GetServerById(GetServerByIdRequest) returns (ServerListing);
  rpc HeartbeatLobby(HeartbeatLobbyRequest) returns (HeartbeatLobbyResponse);
}